--- a/.github/workflows/deployapp.yml
+++ b/.github/workflows/deployapp.yml
@@ -6,12 +6,13 @@ on:
       - master
 
 jobs:
-  name: DeployApp
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v3
+  deployapp:
+    name: DeployApp
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-    - name: Compile CSS and Javascript
-      run: |
-        npm install
-        npm run prod
+      - name: Compile CSS and Javascript
+        run: |
+          npm install
+          npm run prod
